--- a/src/index.css
+++ b/src/index.css
@@ -1,71 +1,71 @@
-html{
+html {
   font-size: 62.5; /*  16px */
   box-sizing: border-box;
 }
-body{
+body {
   font: 1.6rem Helvetica;
   height: 100vh;
   margin: 0;
 }
-#root{
+#root {
   height: 100%;
 }
-.grid-container{
+.grid-container {
   display: grid;
   grid-template-areas: "header" "main" "footer";
   grid-template-columns: 1fr;
   grid-template-rows: 5rem 1fr 5rem;
   height: 100%;
 }
-.header{
+.header {
   grid-area: header;
-  background-color: #203040 ;
+  background-color: #203040;
   color: #ffffff;
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 1rem;
 }
-.brand a{
-  color:white;
+.brand a {
+  color: white;
   font-size: 2.5rem;
   font-weight: bold;
   text-decoration: none;
 }
-.header-links a{
-  color:#ffffff;
+.header-links a {
+  color: #ffffff;
   text-decoration: none;
 }
-.header-links a:hover{
+.header-links a:hover {
   color: #ff8000;
 }
-.main{
+.main {
   grid-area: main;
 }
-.footer{
+.footer {
   grid-area: footer;
-  background-color: #203040 ;
+  background-color: #203040;
   color: #ffffff;
   display: flex;
   justify-content: center;
   align-items: center;
 }
-.a{
+.a {
   text-decoration: none;
 }
-a:hover{
-  color:#ff8000
+a:hover {
+  color: #ff8000;
 }
 
-   /* Home Screen */
+/* Home Screen */
 
-.products{
+.products {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
 }
-.products li{
+.products li {
   list-style-type: none;
   padding: 0;
   flex: 0 1 34rem;
@@ -73,33 +73,33 @@ a:hover{
   height: 50rem;
   border-bottom: 0.5rem #c0c0c0 solid;
 }
-.product{
+.product {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   height: 100%;
 }
-.product-name{
+.product-name {
   font-size: 2rem;
   font-weight: bold;
 }
-.product-brand{
+.product-brand {
   font-size: 1.2rem;
   color: #808080;
 }
-.product-price{
+.product-price {
   font-size: 2rem;
   font-weight: bold;
 }
-.product-image{
-  max-width: 34rem ;
+.product-image {
+  max-width: 34rem;
   max-height: 34rem;
 }
-.product-ratings{
+.product-ratings {
   margin-bottom: 1rem;
 }
-  /* Sidebar */
-.brand button{
+/* Sidebar */
+.brand button {
   font-size: 3rem;
   padding: 0.5rem;
   background: none;
@@ -107,7 +107,7 @@ a:hover{
   color: white;
   cursor: pointer;
 }
-.sidebar{
+.sidebar {
   position: fixed;
   transition: all 500ms;
   transform: translateX(-30rem);
@@ -115,75 +115,122 @@ a:hover{
   background-color: #f0f0f0;
   height: 100%;
 }
-.sidebar.open{
+.sidebar.open {
   transform: translateX(0);
 }
-.sidebar-close-button{
+.sidebar-close-button {
   border-radius: 50%;
-  border: .1rem #000000 solid;
+  border: 0.1rem #000000 solid;
   width: 3rem;
   height: 3rem;
-  padding: .5rem;
+  padding: 0.5rem;
   font-size: 2rem;
   padding-top: 0%;
   cursor: pointer;
   position: absolute;
-  right: .5rem;
+  right: 0.5rem;
   top: 1.5rem;
-  
 }
-   /* Product Details */
-.details{
+/* Product Details */
+.details {
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
   flex-wrap: wrap;
   padding: 1rem;
 }
-.details-image{
+.details-image {
   flex: 2 1 60rem;
 }
-.details-image img{
+.details-image img {
   max-width: 60rem;
   widows: 100%;
 }
-.details-info{
+.details-info {
   flex: 4 5 10rem;
 }
-.details-action{
+.details-action {
   flex: 1 1 30rem;
   border: 0.1rem #808080 solid;
-  border-radius:  l5rem;
+  border-radius: l5rem;
   background-color: #f8f8f8;
   padding: 1rem;
 }
 
-.details-info ul, .details-action ul{
+.details-info ul,
+.details-action ul {
   list-style-type: none;
   padding: 0%;
 }
-.details-info li, .details-action li{
+.details-info li,
+.details-action li {
   margin-bottom: 1rem;
 }
-.back-to-result{
+.back-to-result {
   padding: 1rem;
 }
-.details-action ul li:last-child{
+.details-action ul li:last-child {
   display: flex;
   flex-direction: column;
 }
-.button{
+.button {
   padding: 1rem;
-  border: .1rem #808080 solid;
+  border: 0.1rem #808080 solid;
   border-radius: 0.5rem;
   cursor: pointer;
-  background-color: #f0c040; 
+  background-color: #f0c040;
 }
-.button:hover{
-border: .1rem #404040 solid;
+.button:hover {
+  border: 0.1rem #404040 solid;
 }
 /*.button.primary{
   background-color: #db6719;
 }*/
-
- 
+/*------Cart----------*/
+.cart {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 1rem;
+  align-items: flex-start;
+}
+.cart-list {
+  flex: 3 1 60rem;
+}
+.cart-action {
+  flex: 1 1 20rem;
+  background-color: #f0f0f0f8;
+  border-radius: 0.5rem;
+  padding: 1rem;
+}
+.cart-list-container {
+  padding: 1;
+  list-style-type: none;
+  margin: 1rem;
+}
+.cart-list-container li {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+  margin-bottom: 1 rem;
+  border-bottom: 0.1rem #808080 solid;
+}
+.cart-list-container li img {
+  max-width: 10rem;
+  max-height: 10rem;
+}
+.cart-list-container li:first-child {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+}
+.cart-image {
+  flex: 1 1;
+}
+.cart-name {
+  flex: 8 1;
+}
+.cart-price {
+  flex: 1 1;
+  font-size: 2.5rem;
+  text-align: right;
+}
