--- a/src/index.css
+++ b/src/index.css
@@ -189,9 +189,15 @@ a:hover {
 .button:hover {
   border: 0.1rem #404040 solid;
 }
-/*.button.primary{
-  background-color: #db6719;
-}*/
+.button.primary {
+  background-color: #f0c040;
+}
+.button.secendary {
+  background-color: #f0f0f0;
+}
+.text-center {
+  text-align: center;
+}
 /*------Cart----------*/
 .cart {
   display: flex;
@@ -239,4 +245,31 @@ a:hover {
   flex: 1 1;
   font-size: 2.5rem;
   text-align: right;
+}
+/*----------forms-------*/
+.form {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+}
+.form-container {
+  display: flex;
+  flex-direction: column;
+  width: 32rem;
+  padding: 2rem;
+  border: 0.1rem #c0c0c0 solid;
+  border-radius: 0.5rem;
+  list-style-type: none;
+}
+.form-container li {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 1rem;
+  margin-top: 1rem;
+}
+input {
+  padding: 1rem;
+  border: 0.1rem #c0c0c0 solid;
+  border-radius: 0.5rem;
 }
